# cmake_ppsspp-ffmpeg

./: CMakeLists.txt  README.md  config.h.in  configure_checks.cmake  configure_functions.cmake  generated_headers.cmake  patch-CMakeLists.txt  patch-ext_CMakeLists.txt
libs/: libavcodec.cmake  libavformat.cmake  libavutil.cmake  libswresample.cmake  libswscale.cmake
